--- a/openconnectors/.vscode/launch.json
+++ b/openconnectors/.vscode/launch.json
@@ -5,6 +5,7 @@
     "version": "0.2.0",
     "configurations": [
 
+
         {
             "name": "Launch",
             "type": "go",
@@ -12,7 +13,7 @@
             "mode": "auto",
             "program": "/Users/d046471/tmp/goexperiments/openconnectors/main.go",
             "env": {},
-            "args": []
+            "args": ["-registry-host", "registry-dummy.kyma.local"]
         }
     ]
 }
